  - updated docs for opiSetBackground for Octopus 900
  - deleted opi.procedure.{load|save}
  - moved chooseOpi() into opi.r
  - NOTE - must pass junk params in .jinit() and .jpackage wont work...

OPI 1.5
  - opiPresent only returns a single frame (array of int)
  - seen returned from opiPresent is limited to 0 or 1
  - added !exist to opiDistributor
  - simHenson uses false pos rate to determine seen if db < 0 
  - changed ZEST.final to return "limit" 
  - fixed verbose=1 bug in zest.r
  - changed respSeq return type from ZEST

OPI 1.6
 - added SimHensonRT and related man and data
 - fixed ZEST bug 
 - added warnings about non-OPI parameters to opi functions
 - fixed small typos in ZEST man page
 - added FT.start/step/stop/final/final.details

OPI 1.6.2
 - branch version that uses Tony's special size wheel, not GOLDMANN

OPI 1.7
 - altered to look for opi.jar for Octopus 900 in EyeSuite dir, not 
   in .Library or libpaths()
   Hence changed chooseOpi and opitInialise
 - added maxStim param to dbTocd and cdTodb
 - added type="X" to simH and simH_RT

OPI 2.0
 - moved to a client-server model for Octopus 900

OPI 2.1
 - included Kowa AP 7000 perimeter
 - small bug fix in O900 client
 - moved to a client-server model for Octopus 900 if stim=NULL for opiPresent
 - added fourTwo procedure

OPI 2.2
 - added more Kowa functionality, fixed underscore problem
 - fixed stim==NULL bug on O900 client
 - added bigWheel=TRUE in opiInitialise for octo900

OPI 2.3
 - added support for F310 Logitech Controller for responses to static stimuli
 - added buzzer support for O900
 - fixed Kowa kinetic return values

OPI 2.4
 - added purkinje coordinates to return of opiQueryDevice for Kowa AP7000

OPI 2.5
 - added imo
 - added different types of buzzer for Octopus 900
 - added 4000/10000 as 0 dB choice for Octopus 900

OPI 2.6
 - added Compass support
 - fixed sneaky kinetic speed bug

OPI 2.7
 - Added Kinetic Stimuli to SimHenson