@@ -102,3 +102,4 @@ OPI 2.6
 
 OPI 2.7
  - Added Kinetic Stimuli to SimHenson
+ - updated Compass protocl to The Helsinki Draft
